--- a/docs/资源列表.md
+++ b/docs/资源列表.md
@@ -1,9 +1,10 @@
+> 更新时间：2022/03/24
 
 
 ## 场地类型列表
 
 | 场地               | 校区       | id  |
-| ------------------ | ---------- | --- |
+| :----------------: | :--------: | :-: |
 | 网球（明故宫）     | 明故宫校区 | 13  |
 | 羽毛球（明故宫）   | 明故宫校区 | 14  |
 | 羽毛球（天目湖）   | 天目湖校区 | 15  |
