--- a/docs/配置说明.md
+++ b/docs/配置说明.md
@@ -4,8 +4,8 @@
 ## 参数说明
 
 1. auth 中的 `access_token` 和 `refresh_token` 来源于抓包 i·南航 APP。打开i·南航APP，打开一次体育场馆预约，在抓包工具中搜索 access_token 即可。抓包方法见最后。只要手机上的 i·南航APP 没有退出、重新登录，`access_token` 和 `refresh_token` 就有效，如果**重新登录了要重新获取**。
-2. `court_id` 是预约场地的编号，见[场地类型列表](#场地类型列表)。
-3. 每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date`是预约日期，`period`是时间段代码，`sub_resource_id`是场地代码，从表格[场地资源详情](#场地资源详情)中查询，时间段代码是第一列时间段后面括号里的四位数字。
+2. `court_id` 是预约场地的编号，见[场地类型列表](/资源列表?id=场地类型列表)。
+3. 每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date`是预约日期，`period`是时间段代码，`sub_resource_id`是场地代码，从表格[场地资源详情](/资源列表?id=场地资源详情)中查询，时间段代码是第一列时间段后面括号里的四位数字。
 4. `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ等等，所有支持的变量见下。
    ```toml
     BARK_PUSH = ""  # bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
@@ -41,8 +41,6 @@
     TG_PROXY_HOST = ""  # tg 机器人的 TG_PROXY_HOST
     TG_PROXY_PORT = ""  # tg 机器人的 TG_PROXY_PORT
    ```
-
-
 
 ## 完整配置文件
 ```toml
