--- a/docs/配置说明.md
+++ b/docs/配置说明.md
@@ -3,10 +3,10 @@
 
 ## 参数说明
 
-1. auth 中的 `access_token` 和 `refresh_token` 来源于抓包 i·南航 APP。打开i·南航APP，打开一次体育场馆预约，在抓包工具中搜索 access_token 即可。抓包方法见最后。只要手机上的 i·南航APP 没有退出、重新登录，`access_token` 和 `refresh_token` 就有效，如果**重新登录了要重新获取**。
-2. `court_id` 是预约场地的编号，见[场地类型列表](/资源列表?id=场地类型列表)。
-3. 每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date`是预约日期，`period`是时间段代码，`sub_resource_id`是场地代码，从表格[场地资源详情](/资源列表?id=场地资源详情)中查询，时间段代码是第一列时间段后面括号里的四位数字。
-4. `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ等等，所有支持的变量见下。
+1.  `cookie` 和 auth 中的 `access_token` 和 `refresh_token` 来源于抓包 i·南航 APP。打开 i·南航 APP，打开一次体育场馆预约，在抓包工具中找到 `https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login` 的请求，从 `headers` 中提取 `access_token` 和 `refresh_token`，从 `Cookie` 中提取 `cookie`。抓包方法见最后。只要手机上的 i·南航 APP 没有退出、重新登录，`access_token` 和 `refresh_token` 就有效，如果**重新登录了要重新获取**。会优先使用 cookie，如果登录失败，会使用 auth 重新获取 cookie。
+2.  `court_id` 是预约场地的编号，见 [场地类型列表](/资源列表？id=场地类型列表) 。
+3.  每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date` 是预约日期，`period` 是时间段代码，`sub_resource_id` 是场地代码，从表格 [场地资源详情](/资源列表？id=场地资源详情) 中查询，时间段代码是第一列时间段后面括号里的四位数字。
+4.  `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ 等等，所有支持的变量见下。
    ```toml
     BARK_PUSH = ""  # bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
     BARK_ARCHIVE = ""  # bark 推送是否存档
@@ -17,15 +17,15 @@
     DD_BOT_TOKEN = ""  # 钉钉机器人的 DD_BOT_TOKEN
     FSKEY = ""  # 飞书机器人的 FSKEY
     CQHTTP_URL = ""  # go-cqhttp
-    # 推送到个人QQ：http://127.0.0.1/send_private_msg
+    # 推送到个人 QQ: http://127.0.0.1/send_private_msg
     # 群：http://127.0.0.1/send_group_msg
     CQHTTP_QQ = ""  # go-cqhttp 的推送群或用户
-    # CQHTTP_URL 设置 /send_private_msg 时填入 user_id=个人QQ
-    #               /send_group_msg   时填入 group_id=QQ群
+    # CQHTTP_URL 设置 /send_private_msg 时填入 user_id=个人 QQ
+    #               /send_group_msg   时填入 group_id=QQ 群
     CQHTTP_TOKEN = ""  # go-cqhttp 的 access_token
-    GOTIFY_URL = ""  # gotify地址,如https://push.example.de:8080
-    GOTIFY_TOKEN = ""  # gotify的消息应用token
-    GOTIFY_PRIORITY = 0  # 推送消息优先级,默认为0
+    GOTIFY_URL = ""  # gotify 地址，如 https://push.example.de:8080
+    GOTIFY_TOKEN = ""  # gotify 的消息应用 token
+    GOTIFY_PRIORITY = 0  # 推送消息优先级，默认为 0
     IGOT_PUSH_KEY = ""  # iGot 聚合推送的 IGOT_PUSH_KEY
     SCT_KEY = ""  # server 酱的 PUSH_KEY
     PUSH_PLUS_TOKEN = ""  # push+ 微信推送的用户令牌
@@ -48,18 +48,19 @@
 [[users]]
   # 预约场地的 id
   court_id = "19"
-  # 抓包 i·南航 APP 获得
+  # 抓包 i·南航 APP 获得，有 cookie 会优先使用 cookie，否则使用 auth 信息登录
+  cookie = "vjuid=xxxxx; vjvd=xxxxxxxxxxxxxxxxx; vt=xxxxx; PHPSESSID=xxxxxx"
   [users.auth]
   access_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
   refresh_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
-  # 10号场地，19:00-20:00
+  # 10 号场地，19:00-20:00
   [[users.clout_list]]
   date = "2022-03-24"
   period = 1835
   sub_resource_id = 12337
 
-  # 11号场地，19:00-20:00
+  # 11 号场地，19:00-20:00
   [[users.clout_list]]
   date = "2022-03-24"
   period = 1835
@@ -83,4 +84,3 @@
 # -----------------------------------------------
 # 需要更多用户：复制上面全部内容，贴在下面，修改对应参数
 ```
-
