:art: format code

--- a/docs/使用文档.md
+++ b/docs/使用文档.md
@@ -6,49 +6,48 @@
 
 **注意：填写完配置文件后，请务必验证格式是否正确。** 建议使用 [VSCode](https://code.visualstudio.com/) 等编辑器直接编辑，或使用 [Toml-lint](https://www.toml-lint.com/) 在线验证。
 
-
 ## 云函数
 
 > 推荐，不用早起开电脑，成功率高。
 
-### 腾讯云云函数SCF
+### 腾讯云云函数 SCF
 
-1. 打开[腾讯云云函数控制台](https://console.cloud.tencent.com/scf)，登录账号，点击“函数服务”-“新建”。
+1. 打开[腾讯云云函数控制台](https://console.cloud.tencent.com/scf)，登录账号，点击“函数服务” - “新建”。
 2. 选择“从头开始”，输入一个函数名。地域在国内随便选择，运行环境为 Python3.7。
-   
-   ![](https://s2.loli.net/2022/02/09/BVQ1sZnSfRj2UhF.png)
+
+   ![image](https://s2.loli.net/2022/02/09/BVQ1sZnSfRj2UhF.png)
 
 3. 函数代码部分，选择“本地上传 zip 包”，选择下载的程序包并上传。
-   
-   ![](https://s2.loli.net/2022/02/09/HM275iAPhzxRyBn.png)
+
+   ![image](https://s2.loli.net/2022/02/09/HM275iAPhzxRyBn.png)
 
 4. 展开“高级配置”，**修改执行超时时间为 300 秒**。
-   
-   ![](https://dd-static.jd.com/ddimg/jfs/t1/213763/21/15653/18964/623c2d46E033662ed/d45d80684e2ad1ae.png)
 
-5. 展开触发器配置，选择自定义触发周期，填写 cron 表达式 `30 59 6 日 月 * *`，日和月替换为数字，例如预约 4月1日的，填 `30 59 6 1 4 * *`，意思是 4月1日早上6点59分30秒 运行。
-   
-   ![](https://dd-static.jd.com/ddimg/jfs/t1/196757/26/21666/35075/623c2d71E4bbc3145/c0ee9611938d07d2.png)
+   ![image](https://dd-static.jd.com/ddimg/jfs/t1/213763/21/15653/18964/623c2d46E033662ed/d45d80684e2ad1ae.png)
+
+5. 展开触发器配置，选择自定义触发周期，填写 cron 表达式 `30 59 6 日 月 * *`，日和月替换为数字，例如预约 4 月 1 日的，填 `30 59 6 1 4 * *`，意思是 4 月 1 日早上 6 点 59 分 30 秒 运行。
+
+   ![image](https://dd-static.jd.com/ddimg/jfs/t1/196757/26/21666/35075/623c2d71E4bbc3145/c0ee9611938d07d2.png)
 
 6. 跳转到 **函数管理 - 函数代码**页面，找到 `config.toml`，**填写你的配置**。
 7. 点击下方“**部署并测试**”，查看日志测试是否运行正常。
 
-### 阿里云函数计算FC
+### 阿里云函数计算 FC
 
-1. 登录[阿里云函数计算控制台](https://fcnext.console.aliyun.com/overview)，在最上方选择好地域。进入“服务及函数”-“创建服务”，输入名称，点击确定。
-   
-   ![](https://s2.loli.net/2022/02/16/pVxDnS1NZrlIAsB.png)
+1. 登录[阿里云函数计算控制台](https://fcnext.console.aliyun.com/overview)，在最上方选择好地域。进入“服务及函数” - “创建服务”，输入名称，点击确定。
+
+   ![image](https://s2.loli.net/2022/02/16/pVxDnS1NZrlIAsB.png)
 
 2. 进入创建好的服务，点击**创建函数**，**从零开始创建**。输入**函数名称**，运行环境选择 **Python 3**，触发方式为**通过事件触发**，内存规格选择 **128MB**。
-   
-3. 创建完成后，进入**函数代码**页面，选择“上传代码”-上传 zip 包，选择下载的 serverless 包并上传。
-   
+
+3. 创建完成后，进入**函数代码**页面，选择“上传代码” - 上传 zip 包，选择下载的 serverless 包并上传。
+
 4. 上传后，在编辑器中找到`config.toml`，**填写你的配置**。保存后，点击**部署代码**，再点击**测试函数**。
-   
+
     ![image.png](https://dd-static.jd.com/ddimg/jfs/t1/190778/30/22199/150074/623c2e5aE39b106c1/bf7075e6dfdc34b9.png)
 
-5. 切换到**触发器管理**选项卡，**创建触发器**，选择**定时触发器**，输入**名称**，选择**按照 CRON 表达式触发**，填入 `CRON_TZ=Asia/Shanghai 30 59 6 日 月 *`，日和月替换为数字，例如预约 4月1日的，填 `CRON_TZ=Asia/Shanghai 30 59 6 1 4 *`，意思是 4月1日早上6点59分30秒 运行。
-   
+5. 切换到**触发器管理**选项卡，**创建触发器**，选择**定时触发器**，输入**名称**，选择**按照 CRON 表达式触发**，填入 `CRON_TZ=Asia/Shanghai 30 59 6 日 月 *`，日和月替换为数字，例如预约 4 月 1 日的，填 `CRON_TZ=Asia/Shanghai 30 59 6 1 4 *`，意思是 4 月 1 日早上 6 点 59 分 30 秒 运行。
+
    ![image.png](https://dd-static.jd.com/ddimg/jfs/t1/222935/18/13746/25929/623c2fc9E9cb47bcd/dc31ff573079a9da.png)
 
 ## Windows
@@ -56,4 +55,3 @@
 1. 解压缩，打开 config.toml，填写配置文件。
 
 2. 打开 cmd 或 powershell，cd 进入当前目录，运行 `./Court_Reservation.exe`，即可。注意，要比 `7:00:00` 早一点运行，例如 `6:59:00`。
-
