--- a/docs/抓包方法.md
+++ b/docs/抓包方法.md
@@ -1,8 +1,6 @@
 # 抓包方法
 
-
 ## Android
-
 
 ### 下载软件
 
@@ -32,41 +30,40 @@
 5. 勾选 ehall3.nuaa.edu.cn 域名，然后返回到 HttpCanary 主界面。
 6. 找到`https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login`，在请求中复制`access_token` 和 `refresh_token` 即可。
 
-
 ## iOS
 
 ### 下载 Stream
 
 从 AppStore 下载并安装免费网络调试工具 [Stream](https://apps.apple.com/cn/app/stream/id1312141691)。
 
-![](https://ae04.alicdn.com/kf/H5f90b9f6e3124bd3831c8d331db4d8dfU.png)
+![image](https://ae04.alicdn.com/kf/H5f90b9f6e3124bd3831c8d331db4d8dfU.png)
 
 ### 配置 HTTPS 抓包
 
-1、打开 APP，点击设置中的“**HTTPS 抓包**”，允许“Stream”添加 VPN 配置。
+1. 打开 APP，点击设置中的“**HTTPS 抓包**”，允许“Stream”添加 VPN 配置。
 
-2、点击“安装 CA 证书”，会跳转到 Safari，提示“此网站正尝试下载一个配置描述文件”，选择“允许”，并在 iPhone/iPad 上安装描述文件。
+2. 点击“安装 CA 证书”，会跳转到 Safari，提示“此网站正尝试下载一个配置描述文件”，选择“允许”，并在 iPhone/iPad 上安装描述文件。
 
-![](https://ae03.alicdn.com/kf/H7df95f4bbc5f4bb2b7cbd99e06faf1fbK.png)
-![](https://ae02.alicdn.com/kf/Hf4492646cc464514a247f633a97f0759p.png)
+    ![image](https://ae03.alicdn.com/kf/H7df95f4bbc5f4bb2b7cbd99e06faf1fbK.png)
+    ![image](https://ae02.alicdn.com/kf/Hf4492646cc464514a247f633a97f0759p.png)
 
-3、下载完描述文件后，打开**手机设置-通用-VPN 与设备管理**，在“**已下载的描述文件**”中点击“Stream Generated CA”，点击右上角的“**安装**”。
+3. 下载完描述文件后，打开**手机设置-通用-VPN 与设备管理**，在“**已下载的描述文件**”中点击“Stream Generated CA”，点击右上角的“**安装**”。
 
-![](https://ae01.alicdn.com/kf/H20ddf5f0f8d141f793c020ce162b5070G.png)
+    ![image](https://ae01.alicdn.com/kf/H20ddf5f0f8d141f793c020ce162b5070G.png)
 
-4、回到 Stream，进入步骤二，点击“**去信任证书**”。
+4. 回到 Stream，进入步骤二，点击“**去信任证书**”。
 
-![](https://ae01.alicdn.com/kf/Hb1e11cff79e54433b4741deffb344bc2s.png)
+    ![image](https://ae01.alicdn.com/kf/Hb1e11cff79e54433b4741deffb344bc2s.png)
 
-5、再次进入**手机设置-通用-关于本机**，拉到最下面，点击“**证书信任设置**”，将 Stream 的证书信任开关打开。
+5. 再次进入**手机设置-通用-关于本机**，拉到最下面，点击“**证书信任设置**”，将 Stream 的证书信任开关打开。
 
-![](https://ae01.alicdn.com/kf/H32740101f7ef4e9cb113492460da394cV.png)
+    ![image](https://ae01.alicdn.com/kf/H32740101f7ef4e9cb113492460da394cV.png)
 
 ### 抓取Cookie
 
 1. 打开 Stream，点击“开始抓包”，然后打开 i·南航 APP，正常提交一次健康打卡。
 2. 停止抓包，点击“抓包历史”，选择最近一次的历史记录，点击右上角的搜索按钮，搜索“refresh_token”关键字。
-   
+
     ![H22f48e924b514f82a72971d819faea491.png](https://ae01.alicdn.com/kf/He104609480dd4438b198305c64abb6e4N.png)
 
 3. 找到`https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login`请求，切换到“请求”选项卡，从“请求头部”中复制`refresh_token`和`access_token`冒号后面的内容。
