--- a/docs/资源列表.md
+++ b/docs/资源列表.md
@@ -1,24 +1,24 @@
-> 更新时间：2022/03/24
+# 资源列表
 
+> 更新时间：2022/03/24
 
 ## 场地类型列表
 
-| 场地               | 校区       | id  |
-| :----------------: | :--------: | :-: |
-| 网球（明故宫）     | 明故宫校区 | 13  |
-| 羽毛球（明故宫）   | 明故宫校区 | 14  |
-| 羽毛球（天目湖）   | 天目湖校区 | 15  |
-| 乒乓球（明故宫）   | 明故宫校区 | 16  |
-| 羽毛球（体育馆）   | 将军路校区 | 17  |
-| 羽毛球（体育中心） | 将军路校区 | 19  |
-| 网球（将军路）     | 将军路校区 | 20  |
+|        场地        |    校区    |  id   |
+| :----------------: | :--------: | :---: |
+|   网球（明故宫）   | 明故宫校区 |  13   |
+|  羽毛球（明故宫）  | 明故宫校区 |  14   |
+|  羽毛球（天目湖）  | 天目湖校区 |  15   |
+|  乒乓球（明故宫）  | 明故宫校区 |  16   |
+|  羽毛球（体育馆）  | 将军路校区 |  17   |
+| 羽毛球（体育中心） | 将军路校区 |  19   |
+|   网球（将军路）   | 将军路校区 |  20   |
 
 ## 场地资源详情
 
 ### 明故宫校区 网球
 
-
-|                        |  1号  |  2号  |  3号  |  4号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  |
 | :--------------------: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1475**) | 11987 | 12000 | 12013 | 12026 |
 | 09:00-10:00 (**1476**) | 11988 | 12001 | 12014 | 12027 |
@@ -36,7 +36,7 @@
 
 ### 明故宫校区 羽毛球
 
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1363**) | 11234 | 11245 | 11256 | 11267 | 11278 | 11289 |
 | 09:00-10:00 (**1364**) | 11235 | 11246 | 11257 | 11268 | 11279 | 11290 |
@@ -50,10 +50,9 @@
 | 19:00-20:00 (**1372**) | 11231 | 11242 | 11253 | 11264 | 11275 | 11286 |
 | 20:00-21:00 (**1373**) | 11232 | 11243 | 11254 | 11265 | 11276 | 11287 |
 
-
 ### 天目湖校区 羽毛球
 
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1449**) | 11857 | 11870 | 11883 | 11896 | 11909 | 11922 |
 | 09:00-10:00 (**1450**) | 11858 | 11871 | 11884 | 11897 | 11910 | 11923 |
@@ -69,11 +68,9 @@
 | 19:00-20:00 (**1460**) | 11868 | 11881 | 11894 | 11907 | 11920 | 11933 |
 | 20:00-21:00 (**1461**) | 11869 | 11882 | 11895 | 11908 | 11921 | 11934 |
 
+### 明故宫校区 乒乓球
 
-### 明故宫校区 乒乓球 
-
-  
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |  7号  |  8号  |  9号  | 10号  | 11号  | 12号  | 13号  | 14号  | 15号  | 16号  | 17号  | 18号  | 19号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  | 7 号  | 8 号  | 9 号  | 10 号 | 11 号 | 12 号 | 13 号 | 14 号 | 15 号 | 16 号 | 17 号 | 18 号 | 19 号 |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**2080**) | 12596 | 12607 | 12618 | 12629 | 12640 | 12651 | 12662 | 12673 | 12684 | 12695 | 12706 | 12717 | 12728 | 12739 | 12750 | 12761 | 12772 | 12783 | 12794 |
 | 09:00-10:00 (**2081**) | 12597 | 12608 | 12619 | 12630 | 12641 | 12652 | 12663 | 12674 | 12685 | 12696 | 12707 | 12718 | 12729 | 12740 | 12751 | 12762 | 12773 | 12784 | 12795 |
@@ -87,11 +84,9 @@
 | 19:00-20:00 (**2089**) | 12605 | 12616 | 12627 | 12638 | 12649 | 12660 | 12671 | 12682 | 12693 | 12704 | 12715 | 12726 | 12737 | 12748 | 12759 | 12770 | 12781 | 12792 | 12803 |
 | 20:00-21:00 (**2090**) | 12606 | 12617 | 12628 | 12639 | 12650 | 12661 | 12672 | 12683 | 12694 | 12705 | 12716 | 12727 | 12738 | 12749 | 12760 | 12771 | 12782 | 12793 | 12804 |
 
-
 ### 将军路校区 羽毛球（体育馆）
 
-
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |  7号  |  8号  |  9号  | 10号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  | 7 号  | 8 号  | 9 号  | 10 号 |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1411**) | 11566 | 11579 | 11592 | 11605 | 11618 | 11631 | 11644 | 11657 | 11670 | 11683 |
 | 09:00-10:00 (**1412**) | 11567 | 11580 | 11593 | 11606 | 11619 | 11632 | 11645 | 11658 | 11671 | 11684 |
@@ -107,11 +102,9 @@
 | 19:00-20:00 (**1422**) | 11564 | 11577 | 11590 | 11603 | 11616 | 11629 | 11642 | 11655 | 11668 | 11681 |
 | 20:00-21:00 (**1423**) | 11565 | 11578 | 11591 | 11604 | 11617 | 11630 | 11643 | 11656 | 11669 | 11682 |
 
-
 ### 将军路校区 羽毛球（体育中心）
 
-
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |  7号  |  8号  |  9号  | 10号  | 11号  | 12号  | 13号  | 14号  | 15号  | 16号  | 17号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  | 7 号  | 8 号  | 9 号  | 10 号 | 11 号 | 12 号 | 13 号 | 14 号 | 15 号 | 16 号 | 17 号 |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1837**) | 12222 | 12235 | 12248 | 12261 | 12274 | 12287 | 12300 | 12313 | 12326 | 12339 | 12352 | 12365 | 12378 | 12391 | 12404 | 12417 | 12430 |
 | 09:00-10:00 (**1825**) | 12210 | 12223 | 12236 | 12249 | 12262 | 12275 | 12288 | 12301 | 12314 | 12327 | 12340 | 12353 | 12366 | 12379 | 12392 | 12405 | 12418 |
@@ -127,11 +120,9 @@
 | 19:00-20:00 (**1835**) | 12220 | 12233 | 12246 | 12259 | 12272 | 12285 | 12298 | 12311 | 12324 | 12337 | 12350 | 12363 | 12376 | 12389 | 12402 | 12415 | 12428 |
 | 20:00-21:00 (**1836**) | 12221 | 12234 | 12247 | 12260 | 12273 | 12286 | 12299 | 12312 | 12325 | 12338 | 12351 | 12364 | 12377 | 12390 | 12403 | 12416 | 12429 |
 
-
 ### 将军路校区 网球
 
-
-|                        |  1号  |  2号  |  3号  |  4号  |  5号  |  6号  |
+|                        | 1 号  | 2 号  | 3 号  | 4 号  | 5 号  | 6 号  |
 | :--------------------: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 08:00-09:00 (**1325**) | 11089 | 11102 | 11115 | 11128 | 11141 | 11154 |
 | 09:00-10:00 (**1326**) | 11090 | 11103 | 11116 | 11129 | 11142 | 11155 |
