update notify introduction

--- a/docs/配置说明.md
+++ b/docs/配置说明.md
@@ -6,7 +6,7 @@
 1. `cookie` 和 auth 中的 `access_token` 和 `refresh_token` 来源于抓包 i·南航 APP。打开 i·南航 APP，打开一次体育场馆预约，在抓包工具中找到 `https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login` 的请求，从 `headers` 中提取 `access_token` 和 `refresh_token`，从 `Cookie` 中提取 `cookie`。抓包方法见最后。只要手机上的 i·南航 APP 没有退出、重新登录，`access_token` 和 `refresh_token` 就有效，如果**重新登录了要重新获取**。会优先使用 cookie，如果登录失败，会使用 auth 重新获取 cookie。
 2. `court_id` 是预约场地的编号，见 [场地类型列表](/资源列表?id=场地类型列表) 。
 3. 每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date` 是预约日期，`period` 是时间段代码，`sub_resource_id` 是场地代码，从表格 [场地资源详情](/资源列表?id=场地资源详情) 中查询，时间段代码是第一列时间段后面括号里的四位数字。
-4. `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ 等等，所有支持的变量见下。
+4. `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ 等等，所有支持的变量见下。如果没有什么要求，建议用 [Pushplus](https://www.pushplus.plus/)，使用微信登录，点开一对一推送，复制 Token 到 `PUSH_PLUS_TOKEN` 中即可。
 
    ```toml
     BARK_PUSH = ""  # bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
