--- a/docs/配置说明.md
+++ b/docs/配置说明.md
@@ -3,86 +3,122 @@
 
 ## 参数说明
 
-1. `cookie` 和 auth 中的 `access_token` 和 `refresh_token` 来源于抓包 i·南航 APP。打开 i·南航 APP，打开一次体育场馆预约，在抓包工具中找到 `https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login` 的请求，从 `headers` 中提取 `access_token` 和 `refresh_token`，从 `Cookie` 中提取 `cookie`。抓包方法见最后。只要手机上的 i·南航 APP 没有退出、重新登录，`access_token` 和 `refresh_token` 就有效，如果**重新登录了要重新获取**。会优先使用 cookie，如果登录失败，会使用 auth 重新获取 cookie。
-2. `court_id` 是预约场地的编号，见 [场地类型列表](/资源列表?id=场地类型列表) 。
-3. 每一个 `[[users.clout_list]]` 是一个场地，会依次从上到下尝试预约，无法预约会自动预约下一个，建议多放几个，以免都失败。其中：`date` 是预约日期，`period` 是时间段代码，`sub_resource_id` 是场地代码，从表格 [场地资源详情](/资源列表?id=场地资源详情) 中查询，时间段代码是第一列时间段后面括号里的四位数字。
-4. `[users.notify]` 是通知设置，用于推送预约结果，可以选择微信/Telegram/钉钉/飞书/QQ 等等，所有支持的变量见下。如果没有什么要求，建议用 [Pushplus](https://www.pushplus.plus/)，使用微信登录，点开一对一推送，复制 Token 到 `PUSH_PLUS_TOKEN` 中即可。
+### 基本配置
 
-   ```toml
-    BARK_PUSH = ""  # bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
-    BARK_ARCHIVE = ""  # bark 推送是否存档
-    BARK_GROUP = ""  # bark 推送分组
-    BARK_SOUND = ""  # bark 推送声音
-    BARK_ICON = ""  # bark 推送图标
-    DD_BOT_SECRET = ""  # 钉钉机器人的 DD_BOT_SECRET
-    DD_BOT_TOKEN = ""  # 钉钉机器人的 DD_BOT_TOKEN
-    FSKEY = ""  # 飞书机器人的 FSKEY
-    CQHTTP_URL = ""  # go-cqhttp
-    # 推送到个人 QQ: http://127.0.0.1/send_private_msg
-    # 群：http://127.0.0.1/send_group_msg
-    CQHTTP_QQ = ""  # go-cqhttp 的推送群或用户
-    # CQHTTP_URL 设置 /send_private_msg 时填入 user_id=个人 QQ
-    #               /send_group_msg   时填入 group_id=QQ 群
-    CQHTTP_TOKEN = ""  # go-cqhttp 的 access_token
-    GOTIFY_URL = ""  # gotify 地址，如 https://push.example.de:8080
-    GOTIFY_TOKEN = ""  # gotify 的消息应用 token
-    GOTIFY_PRIORITY = 0  # 推送消息优先级，默认为 0
-    IGOT_PUSH_KEY = ""  # iGot 聚合推送的 IGOT_PUSH_KEY
-    SCT_KEY = ""  # server 酱的 PUSH_KEY
-    PUSH_PLUS_TOKEN = ""  # push+ 微信推送的用户令牌
-    PUSH_PLUS_USER = ""  # push+ 微信推送的群组编码
-    QMSG_KEY = ""  # qmsg 酱的 QMSG_KEY
-    QMSG_TYPE = ""  # qmsg 酱的 QMSG_TYPE
-    QYWX_AM = ""  # 企业微信应用
-    QYWX_KEY = ""  # 企业微信机器人
-    TG_BOT_TOKEN = ""  # tg 机器人的 TG_BOT_TOKEN，例：1407203283:AAG9rt-6RDaaX0HBLZQq0laNOh898iFYaRQ
-    TG_USER_ID = ""  # tg 机器人的 TG_USER_ID，例：1434078534
-    TG_API_HOST = ""  # tg 代理 api
-    TG_PROXY_AUTH = ""  # tg 代理认证参数
-    TG_PROXY_HOST = ""  # tg 机器人的 TG_PROXY_HOST
-    TG_PROXY_PORT = ""  # tg 机器人的 TG_PROXY_PORT
-   ```
+1. 日志等级：可选`debug`或`info`。
+2. 验证码识别 API：可使用默认（不保证访问速度和可用性）或自建以提升访问速度。
+3. 资源文件：留空使用本地文件，若 Github 访问不流畅可以自建镜像或者下载到本地。
+
+### 登录信息
+
+1. 支持三种登录方式，前两种需要抓包，建议 cookie token 和 统一身份认证 三种方式全部配置。登录速度从上到下依次递减，失败后会自动换下一个登录方式。
+
+2. Cookie 和 Token 需要抓包 i·南航 APP，见[抓包方法](/抓包方法)。打开 i·南航 APP，打开一次体育场馆预约，在抓包工具中找到 `https://ehall3.nuaa.edu.cn/api/login/nuaa-app-login` 的请求，从 `headers` 中提取 `access_token` 和 `refresh_token`，从 `Cookie` 中提取 `cookie`。
+
+3. `access_token` 和 `refresh_token` 只要不退出手机端 APP 就一直有效，也是模拟人工操作最真实的一种方法。
+
+### 场地类型和场地列表
+
+1. `court_id` 是预约场地的编号，见 [场地类型列表](/资源列表?id=场地类型列表) 。
+2. `courts_list` 是要预约的场地。其中 `time` 是时间段；`courts` 是场地号，例如 `[4, 5, 6]` 就是依次尝试预约 `4 号 5 号 6 号`场地。多个时间段可复制添加。
+
+### 通知设置
+
+用于将预约结果推送到 微信/Telegram/钉钉/飞书/QQ 等等。所有支持的变量见[完整推送配置](/配置说明?id=完整推送配置)。iOS 推荐使用 Bark，微信推荐使用 [Pushplus](https://www.pushplus.plus/)，其他平台推荐 QQ 或 Telegram。
 
 ## 完整配置文件
 
-```toml
-# 第一个用户
-[[users]]
-  # 预约场地的 id
-  court_id = "19"
-  # 抓包 i·南航 APP 获得，有 cookie 会优先使用 cookie，否则使用 auth 信息登录
-  cookie = "vjuid=xxxxx; vjvd=xxxxxxxxxxxxxxxxx; vt=xxxxx; PHPSESSID=xxxxxx"
-  [users.auth]
-  access_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  refresh_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+```yaml
+    # 日志等级
+    log_level: debug
+    # 验证码识别 API
+    ocr_api: https://cocr.xm.mk/
+    # 资源文件，留空使用本地文件。Github 访问不流畅可自行镜像或留空以使用本地文件。
+    resources_file: https://xm798.github.io/NUAA-Court-Reservation/files/resources.json
 
-  # 10 号场地，19:00-20:00
-  [[users.clout_list]]
-  date = "2022-03-24"
-  period = 1835
-  sub_resource_id = 12337
+    # 登录信息
+    auth:
+       # 预约系统 Cookie
+      cookie: vjuid=xxxxx; vjvd=xxxxxxxxxxxxxxxxx; vt=xxxxx; PHPSESSID=xxxxxx
+       # i·南航 APP Token，从 i·南航 APP 抓包，抓包方法见最后。
+      access_token: xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      refresh_token: xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      username: '011710101'
+       # 统一身份认证系统密码
+      password: password
+      imei:  # 模拟设备信息，应为一个合法的 UUID(大写) 或留空。
 
-  # 11 号场地，19:00-20:00
-  [[users.clout_list]]
-  date = "2022-03-24"
-  period = 1835
-  sub_resource_id = 12350
+    # 场地类型
+    court_id: 19
 
-  # 还需要添加可以复制之后在这里添加，比如：
-  #  [[users.clout_list]]
-  #  date = "2022-03-24"
-  #  period = 1834
-  #  sub_resource_id = 12336
+    # 要预约的场地列表
+    courts_list:
+    - time: '09:00-10:00'
+      courts: [3, 4, 5]
 
-  # 通知设置
-  [users.notify]
-  # Telegram 推送
-  TG_BOT_TOKEN = "1xxxxxxxx:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  TG_USER_ID = "xxxxxxxxx"
-  TG_API_HOST = "xxxxxxxxxx"
-  # 微信 Push plus 推送
-  PUSH_PLUS_TOKEN = "xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+    - time: '18:00-19:00'
+      courts: [6]
 
-# -----------------------------------------------
-# 需要更多用户：复制上面全部内容，贴在下面，修改对应参数
+    # 通知设置
+    notify:
+      # 微信 Push plus 推送
+      PUSH_PLUS_TOKEN: xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      # Bark 推送
+      BARK_PUSH':  # Bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
+      # QQ 推送
+      CQHTTP_URL:                 # go-cqhttp API
+      CQHTTP_MESSAGE_TYPE:        # group：发送到群聊；private：发送到私聊
+      CQHTTP_QQ:                  # 群号 / QQ 号
+      CQHTTP_TOKEN:               # Token
+      # Pushplus 推送
+      PUSH_PLUS_TOKEN:    # Pushplus 微信推送的用户令牌
+      # Telegram 推送
+      TG_BOT_TOKEN:       # Telegram 机器人的 TG_BOT_TOKEN，例：1407203283:AAG9rt-6RDaaX0HBLZQq0laNOh898iFYaRQ
+      TG_USER_ID:         # Telegram 机器人的 TG_USER_ID，例：1434078534
+      TG_API_HOST:        # Telegram 代理 api
 ```
+
+## 完整推送配置
+
+   ```yaml
+    # Bark
+    BARK_PUSH: ""  # bark IP 或设备码，例：https://api.day.app/DxHcxxxxxRxxxxxxcm/
+    BARK_ARCHIVE: ""  # bark 推送是否存档
+    BARK_GROUP: ""  # bark 推送分组
+    BARK_SOUND: ""  # bark 推送声音
+    BARK_ICON: ""  # bark 推送图标
+    # 钉钉机器人
+    DD_BOT_SECRET: ""  # 钉钉机器人的 DD_BOT_SECRET
+    DD_BOT_TOKEN: ""  # 钉钉机器人的 DD_BOT_TOKEN
+    # 飞书
+    FSKEY: ""  # 飞书机器人的 FSKEY
+    # QQ
+    CQHTTP_URL:                 # go-cqhttp API
+    CQHTTP_MESSAGE_TYPE:        # group：发送到群聊；private：发送到私聊
+    CQHTTP_QQ:                  # 群号 / QQ 号
+    CQHTTP_TOKEN:               # Token
+    # GOTIFY
+    GOTIFY_URL: ""      # gotify 地址，如 https://push.example.de:8080
+    GOTIFY_TOKEN: ""    # gotify 的消息应用 token
+    GOTIFY_PRIORITY: 0  # 推送消息优先级，默认为 0
+    # IGOT
+    IGOT_PUSH_KEY: ""   # iGot 聚合推送的 IGOT_PUSH_KEY
+    # Server Chan
+    SCT_KEY: ""         # server 酱的 PUSH_KEY
+    # Pushplus
+    PUSH_PLUS_TOKEN: "" # push+ 微信推送的用户令牌
+    PUSH_PLUS_USER: ""  # push+ 微信推送的群组编码
+    # Qmsg
+    QMSG_KEY: ""       # qmsg 酱的 QMSG_KEY
+    QMSG_TYPE: ""      # qmsg 酱的 QMSG_TYPE
+    # 企业微信
+    QYWX_AM: ""       # 企业微信应用
+    QYWX_KEY: ""      # 企业微信机器人
+    # Telegram
+    TG_BOT_TOKEN:     # Telegram 机器人的 TG_BOT_TOKEN，例：1407203283:AAG9rt-6RDaaX0HBLZQq0laNOh898iFYaRQ
+    TG_USER_ID:       # Telegram 机器人的 TG_USER_ID，例：1434078534
+    TG_API_HOST:      # Telegram 代理 api
+    TG_PROXY_AUTH:    # tg 代理认证参数
+    TG_PROXY_HOST:    # tg 机器人的 TG_PROXY_HOST
+    TG_PROXY_PORT:    # tg 机器人的 TG_PROXY_PORT
+   ```
