--- a/docs/使用文档.md
+++ b/docs/使用文档.md
@@ -4,11 +4,9 @@
 
 2. 填写配置文件，填写说明见[配置文件填写说明](/配置说明.md)。
 
-**注意：填写完配置文件后，请务必验证格式是否正确。** 建议使用 [VSCode](https://code.visualstudio.com/) 等编辑器直接编辑，或使用 [Toml-lint](https://www.toml-lint.com/) 在线验证。
+**注意：填写完配置文件后，请务必验证格式是否正确。** 建议使用 [VSCode](https://code.visualstudio.com/) 等编辑器直接编辑，或使用 [YAML Validator](https://codebeautify.org/yaml-validator) 在线验证。
 
 ## 云函数
-
-> 推荐，不用早起开电脑，成功率高。
 
 ### 腾讯云云函数 SCF
 
@@ -29,7 +27,7 @@
 
    ![image](https://dd-static.jd.com/ddimg/jfs/t1/196757/26/21666/35075/623c2d71E4bbc3145/c0ee9611938d07d2.png)
 
-6. 跳转到 **函数管理 - 函数代码**页面，找到 `config.toml`，**填写你的配置**。
+6. 跳转到 **函数管理 - 函数代码**页面，找到 `config.yaml`，**填写你的配置**。
 7. 点击下方“**部署并测试**”，查看日志测试是否运行正常。
 
 ### 阿里云函数计算 FC
@@ -38,11 +36,11 @@
 
    ![image](https://s2.loli.net/2022/02/16/pVxDnS1NZrlIAsB.png)
 
-2. 进入创建好的服务，点击**创建函数**，**从零开始创建**。输入**函数名称**，运行环境选择 **Python 3**，触发方式为**通过事件触发**，内存规格选择 **128MB**。
+2. 进入创建好的服务，点击**创建函数**，**从零开始创建**。输入**函数名称**，运行环境选择 **Python 3.9**，触发方式为**通过事件触发**。
 
 3. 创建完成后，进入**函数代码**页面，选择“上传代码” - 上传 zip 包，选择下载的 serverless 包并上传。
 
-4. 上传后，在编辑器中找到`config.toml`，**填写你的配置**。保存后，点击**部署代码**，再点击**测试函数**。
+4. 上传后，在编辑器中找到`config.yaml`，**填写你的配置**。保存后，点击**部署代码**，再点击**测试函数**。
 
     ![image.png](https://dd-static.jd.com/ddimg/jfs/t1/190778/30/22199/150074/623c2e5aE39b106c1/bf7075e6dfdc34b9.png)
 
@@ -52,6 +50,6 @@
 
 ## Windows
 
-1. 解压缩，打开 config.toml，填写配置文件。
+1. 解压缩，打开 `config.yaml`，填写配置文件。
 
-2. 打开 cmd 或 powershell，cd 进入当前目录，运行 `./Court_Reservation.exe`，即可。注意，要比 `7:00:00` 早一点运行，例如 `6:59:00`。
+2. 打开 `cmd` 或 `powershell`，cd 进入当前目录，运行 `./Court_Reservation.exe`，即可。注意，要比 `7:00:00` 早一点运行，例如 `6:59:00`。
