--- a/docs/更新日志.md
+++ b/docs/更新日志.md
@@ -1,5 +1,15 @@
 # 更新日志
 
+## v0.6.3
+
+2022-04-30
+
+### 更新内容
+
+Fix:
+- 调整 uuid 生成算法，与配置文件 auth 字段唯一对应
+- 微调休眠时间
+
 ## v0.6.2
 
 2022-04-29
@@ -7,7 +17,6 @@
 ### 更新内容
 
 Fix:
-
 - 资源更新
 
 ## v0.6.1
@@ -15,7 +24,6 @@ Fix:
 ### 更新内容
 
 Fix:
-
 - 调整请求超时时间
 - 修复重复登录的错误
 
@@ -24,12 +32,10 @@ Fix:
 ### 更新内容
 
 Feat:
-
 - 全新的人性化的配置方式
 - 优化日志逻辑
 
 Fix:
-
 - 修复部分推送
 - 调整请求超时时间
 
@@ -40,19 +46,16 @@ Fix:
 **BREAKING CHANGE**：配置文件切换为 YAML 格式
 
 Feat:
-
 - 验证码自动识别
 - 重构登录逻辑
 - 新的登录方式
 - 新的配置文件
 
 Fix:
-
 - 修复需要鉴权的 cqhttp 推送无法使用的问题
 - 修复时区问题
 
 Remove:
-
 - 移除多账号支持，多账号应通过部署多个实例实现
 
 ## v0.4
@@ -60,5 +63,4 @@ Remove:
 ### 更新内容
 
 Fix:
-
 - 修复超过服务时间测试无限重试的问题。
