--- a/docs/使用文档.md
+++ b/docs/使用文档.md
@@ -1,14 +1,14 @@
 # 使用方法
 
-1. 下载对应的程序包，Windows 使用 `xxxx-Windows.zip`，云函数使用 `xxxx-Serverless.zip`。
-
-2. 填写配置文件，填写说明见[配置文件填写说明](/配置说明.md)。
+填写配置文件，填写说明见[配置文件填写说明](/配置说明.md)。
 
 **注意：填写完配置文件后，请务必验证格式是否正确。** 建议使用 [VSCode](https://code.visualstudio.com/) 等编辑器直接编辑，或使用 [YAML Validator](https://codebeautify.org/yaml-validator) 在线验证。
 
-## 云函数
+## 腾讯云云函数 SCF
 
-### 腾讯云云函数 SCF
+> 腾讯云函数自5月23日起开始收费，建议使用阿里云函数。
+
+<details>
 
 1. 打开[腾讯云云函数控制台](https://console.cloud.tencent.com/scf)，登录账号，点击“函数服务” - “新建”。
 2. 选择“从头开始”，输入一个函数名。地域在国内随便选择，运行环境为 Python3.7。
@@ -30,7 +30,9 @@
 6. 跳转到 **函数管理 - 函数代码**页面，找到 `config.yaml`，**填写你的配置**。
 7. 点击下方“**部署并测试**”，查看日志测试是否运行正常。
 
-### 阿里云函数计算 FC
+</details>
+
+## 阿里云函数计算 FC
 
 1. 登录[阿里云函数计算控制台](https://fcnext.console.aliyun.com/overview)，在最上方选择好地域。进入“服务及函数” - “创建服务”，输入名称，点击确定。
 
@@ -47,9 +49,3 @@
 5. 切换到**触发器管理**选项卡，**创建触发器**，选择**定时触发器**，输入**名称**，选择**按照 CRON 表达式触发**，填入 `CRON_TZ=Asia/Shanghai 30 59 6 日 月 *`，日和月替换为数字，例如预约 4 月 1 日的，填 `CRON_TZ=Asia/Shanghai 30 59 6 1 4 *`，意思是 4 月 1 日早上 6 点 59 分 30 秒 运行。
 
    ![image.png](https://dd-static.jd.com/ddimg/jfs/t1/222935/18/13746/25929/623c2fc9E9cb47bcd/dc31ff573079a9da.png)
-
-## Windows
-
-1. 解压缩，打开 `config.yaml`，填写配置文件。
-
-2. 打开 `cmd` 或 `powershell`，cd 进入当前目录，运行 `./Court_Reservation.exe`，即可。注意，要比 `7:00:00` 早一点运行，例如 `6:59:00`。
