:zap: captcha api warm up

--- a/docs/更新日志.md
+++ b/docs/更新日志.md
@@ -1,10 +1,15 @@
 # 更新日志
 
+## v0.6.4
+
+2022-08-20
+
+Fix:
+- 预热验证码识别接口，避免冷启动，提高识别速度
+
 ## v0.6.3
 
 2022-04-30
-
-### 更新内容
 
 Fix:
 - 调整 uuid 生成算法，与配置文件 auth 字段唯一对应
@@ -14,22 +19,16 @@ Fix:
 
 2022-04-29
 
-### 更新内容
-
 Fix:
 - 资源更新
 
 ## v0.6.1
-
-### 更新内容
 
 Fix:
 - 调整请求超时时间
 - 修复重复登录的错误
 
 ## v0.6
-
-### 更新内容
 
 Feat:
 - 全新的人性化的配置方式
@@ -40,8 +39,6 @@ Fix:
 - 调整请求超时时间
 
 ## v0.5
-
-### 更新内容
 
 **BREAKING CHANGE**：配置文件切换为 YAML 格式
 
@@ -59,8 +56,6 @@ Remove:
 - 移除多账号支持，多账号应通过部署多个实例实现
 
 ## v0.4
-
-### 更新内容
 
 Fix:
 - 修复超过服务时间测试无限重试的问题。
